--- a/AngularApplication/EmployeeManagementSystem/src/app/about/about.component.html
+++ b/AngularApplication/EmployeeManagementSystem/src/app/about/about.component.html
@@ -1,4 +1,5 @@
-
+<h1 class="text-center" style="font-size: 30px;"> Employee Management System </h1>
+<div class="container">
 <div class="head">
     <h2> ABOUT US </h2><br>
 </div>
@@ -18,5 +19,5 @@
 <img src="https://blog.synergita.com/wp-content/uploads/2019/06/differentiate-employee-perforamnce-mangement-vs-performance-appraisal-626x400.jpg" alt="index" class="space1"> 
 </div><br>
     <p class="context"><a class="text"></a>Culture shapes results across all facets of a company, from how they complete business processes, to how information is shared, to how they plan to grow in the future.</p>   
-
+</div>
     
