--- a/AngularApplication/EmployeeManagementSystem/src/app/achieve/achieve.component.html
+++ b/AngularApplication/EmployeeManagementSystem/src/app/achieve/achieve.component.html
@@ -1,3 +1,5 @@
+<h1 class="text-center" style="font-size: 30px;"> Employee Management System </h1>
+<div class="container">
 <div class="head">
 <h3>Acheivements</h3></div>
 <div class="space">
@@ -22,4 +24,5 @@
        <br>
        <p><a class="text"></a> It includes strategic planning on how to support employees in a way that allows them to do their best work and facilitate a high level of productivity and engagement.</p>
    <br>  
+</div>
 </div>
