--- a/AngularApplication/EmployeeManagementSystem/src/app/contact/contact.component.html
+++ b/AngularApplication/EmployeeManagementSystem/src/app/contact/contact.component.html
@@ -1,6 +1,7 @@
 <body>
 <section>
-    <br><br>
+  <h1 class="text-center" style="font-size: 30px;"> Employee Management System </h1>
+  <div class="container">
     <div class="space">
         <img src="https://tse4.mm.bing.net/th?id=OIP.JXwlNbcU5DfhkG-u-Z2D-AHaHa&pid=Api&P=0&w=156&h=156" alt="image">
         </div>
@@ -24,6 +25,8 @@
                        <p class="center">Toll Free Number:+1800 200 300 400</p>
                    </div>
                </div>
+               </div>
+
                 </section>
                 <section id="footer">
                     <div class="footer container">
