--- a/AngularApplication/EmployeeManagementSystem/src/app/employee-details/employee-details.component.html
+++ b/AngularApplication/EmployeeManagementSystem/src/app/employee-details/employee-details.component.html
@@ -1,4 +1,5 @@
-<h4 style="text-decoration:underline;"> View Employee Details</h4><br>
+<div class="container">
+<h2 style="text-decoration:underline;"> Employee Details</h2><br>
 <div class="table">
     <div>
         <label> <b> ID: </b></label> {{employee.id}}
@@ -26,4 +27,5 @@
     </div><br><br>
     <a href="/employees" class = "btn btn-info"> Back </a>
    
+</div>
 </div>
