--- a/AngularApplication/EmployeeManagementSystem/src/app/app.component.html
+++ b/AngularApplication/EmployeeManagementSystem/src/app/app.component.html
@@ -8,13 +8,16 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
   <ul class = "navbar-nav">
       <li class = "nav-item">
-          <a routerLink="employees" routerLinkActive="active" class="nav-link" > Home </a>
+          <a routerLink="home" routerLinkActive="active" class="nav-link" > Home </a>
       </li>
+      <li class = "nav-item">
+        <a routerLink="employees" routerLinkActive="active" class="nav-link" > Employee List </a>
+    </li>
       <li class = "nav-item">
           <a routerLink="create-employee" routerLinkActive="active" class="nav-link" > Add Employee</a>
       </li>
       <li class = "nav-item">
-        <a routerLink="achieve" routerLinkActive="active" class="nav-link" style="margin-left: 62em;" > Achievements</a>
+        <a routerLink="achieve" routerLinkActive="active" class="nav-link" style="margin-left: 58em;" > Achievements</a>
     </li>
     <li class = "nav-item">
       <a routerLink="about" routerLinkActive="active" class="nav-link" > About us</a>
@@ -25,8 +28,7 @@
   </ul>
   </div>
 </nav>
-<h1 class="text-center" style="font-size: 30px;"> {{title}} </h1>
-<div class = "container">
+<div>
   <router-outlet></router-outlet>
 </div>
 
