--- a/AngularApplication/EmployeeManagementSystem/src/app/create-employee/create-employee.component.html
+++ b/AngularApplication/EmployeeManagementSystem/src/app/create-employee/create-employee.component.html
@@ -1,3 +1,4 @@
+<h1 class="text-center" style="font-size: 30px;"> Employee Management System </h1>
 <div class="col-md-6 offset-md-3">
     <h4> Create Employee </h4>
     <form (ngSubmit) = "onSubmit()">
